# Bank_operations

./: README.md  pyproject.toml
src/: api_reqests.py  decorators.py  external_api.py  generators.py  json_practice.py  logfile.txt  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_json_practice.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
